# Example-Library

./: README.md  pyproject.toml  setup.py
coolmath.egg-info/: PKG-INFO  SOURCES.txt
mypthonlib.egg-info/: PKG-INFO  SOURCES.txt
tests/: tests_my_functions.py
